<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nav_home">Beranda</string>
    <string name="text_nav_cart">Keranjang</string>
    <string name="text_nav_profile">Profil</string>
    <string name="text_cart_fragment_sample">hello this cart</string>
    <string name="text_home_fragment_sample">hello this home</string>
    <string name="text_profile_fragment_sample">hello this profile</string>
    <string name="text_name">Hai Komang,</string>
    <string name="text_greetings">Mau makan apa hari ini?</string>
    <string name="text_discount">Diskon 50%</string>
    <string name="text_disc_description">Pesan makananmu lewat aplikasi dan dapatkan diskonnya!</string>
    <string name="text_rice_category">Nasi</string>
    <string name="text_noodle_category">Mie</string>
    <string name="text_snack_category">Snack</string>
    <string name="text_drink_category">Minuman</string>
    <string name="text_category_title">Kategori</string>
    <string name="text_list_menu_title">List Menu Makanan</string>
    <string name="text_friedrice_menu">Nasi Goreng Spesial</string>
    <string name="text_friedrice_price">Rp30.000</string>
    <string name="text_frenchfries_menu">Kentang Goreng</string>
    <string name="text_frenchfries_price">Rp15.000</string>
    <string name="text_noodle_menu">Mie Kuah Spesial</string>
    <string name="text_noodle_price">Rp20.000</string>
    <string name="text_lime_mojito_menu">Lime Mojito</string>
    <string name="text_lime_mojito_price">Rp22.000</string>
    <string name="text_category_name">Category</string>
    <string name="text_menu_name">Menu Name</string>
    <string name="text_menu_price">Rp 20.000</string>
    <string name="text_hint_search_bar">Cari Makanan</string>
    <string name="text_menu_name_detail">Nasi Goreng</string>
    <string name="text_menu_price_detail">Rp1.000</string>
    <string name="text_menu_desc_detail">Hidangan klasik Asia dengan nasi yang dimasak sempurna, dicampur dengan daging ayam atau udang, telur, dan sayuran.</string>
    <string name="text_location_detail">Lokasi</string>
    <string name="text_location_address_detail">Restoran Makan Enak, Jalan Raya Nomor 123, Kota Kecamatan, Provinsi, Kode Pos: 12345, Negara: Negara Dummy</string>
    <string name="text_default_quantity">1</string>
    <string name="text_default_button">Tambah ke Keranjang - Rp 1.000</string>
    <string name="text_profile_header">Profile</string>
    <string name="text_profile_username">Username</string>
    <string name="text_profile_email">Email</string>
    <string name="text_profile_phone_number">No. Telepon</string>
    <string name="text_username_profile">YudaSaputraa</string>
    <string name="text_email_value">yudasaputra082@gmail.com</string>
    <string name="text_phone_number_value">0898979897900</string>
    <string name="text_cart_header">Keranjang</string>
    <string name="text_cart_menu_name">Nasi Goreng</string>
    <string name="text_cart_menu_price">Rp8.000</string>
    <string name="text_cart_note">Catatan :</string>
    <string name="text_hint_note">Catatan untuk restoran</string>
    <string name="text_cart_total_price_item">Total : Rp6.000</string>
    <string name="text_toast_on_quantity">Minimum pemesanan 1</string>
    <string name="text_add_cart_title">Tambah ke Keranjang -</string>
    <string name="placeholder_total_price">Tambah ke Keranjang - %1$s</string>
    <string name="text_add_cart_on_success">Berhasil</string>
    <string name="text_add_cart_on_error">Gagal!</string>
    <string name="text_add_cart_on_loading">Loading...</string>
    <string name="text_toast_theme_mode">Kebetulan belum jadi :D</string>
    <string name="text_checkout_header">Konfirmasi Pesanan</string>
    <string name="text_summary_payment_title">Ringkasan Pembayaran</string>
    <string name="text_item_title">menu per item</string>
    <string name="text_shipping_method_title">Metode Pengiriman</string>
    <string name="text_radio_pickup">Ambil Sendiri</string>
    <string name="text_radio_delivery">Dikirim</string>
    <string name="text_payment_method_title">Metode Pembayaran</string>
    <string name="text_rb_cash">Tunai</string>
    <string name="text_rb_e_wallet">Dompet Digital</string>
    <string name="text_btn_order">Pesan</string>
    <string name="text_empty_cart">Keranjangmu kosong!</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_total_price_cart">Rp50.000</string>
    <string name="text_order">Pesan</string>
    <string name="total_quantity">x%s</string>
    <string name="text_dialog_order_success">PESANAN BERHASIL!</string>
    <string name="text_btn_success_order">Oke</string>
    <string name="text_on_error">Error!</string>
    <string name="text_on_menu_data_empty">Data makanan kosong nih!</string>
    <string name="text_on_cart_empty">Keranjangmu kosong!</string>
    <string name="text_category_on_empty">Data kategory kosong!</string>
    <string name="text_empty_price">-</string>
    <string name="text_register">Daftar</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_confirm_password">Konfirmasi Password</string>
    <string name="text_hint_phone_number">No. Telepon</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">konfirmasi Password</string>
    <string name="text_phone_number">No. Telepon</string>
    <string name="text_already_have_account">Sudah punya akun? Login</string>
    <string name="text_sub_register">Daftarkan dirimu dan nikmati kemudahan dalam memesan makanan.</string>
    <string name="text_login">Masuk</string>
    <string name="tv_not_have_account">Belum punya akun? Daftar</string>
    <string name="text_full_name">Nama Lengkap</string>
    <string name="text_hint_full_name">Nama Lengkap</string>
    <string name="text_fullname_cannot_empty">Nama lengkap tidak boleh kosong!</string>
    <string name="text_username_cannot_empty">Username tidak boleh kosong!</string>
    <string name="text_email_cannot_empty">Email tidak boleh kosong!</string>
    <string name="text_invalid_email_format">Masukkan format email yang benar!</string>
    <string name="text_password_cannot_empty">Password tidak boleh kosong!</string>
    <string name="text_password_should_be_8_character"><![CDATA[Password harus > 8 karakter]]></string>
    <string name="text_password_doesnt_match">Kata sandi tidak cocok!</string>
    <string name="text_login_failed">Login Gagal! : %1$s</string>
    <string name="text_register_failed">Register Gagal! : %1$s</string>
    <string name="text_forget_password">Lupa password?</string>
    <string name="text_logout">Logout</string>
    <string name="text_change_password">Ganti Password</string>
    <string name="text_sub_login">Masuk untuk mengakses lebih banyak fitur.</string>
    <string name="create_order_success">Pemesanan berhasil!</string>
    <string name="close">Oke</string>
    <string name="text_display_name">Hai, %1$s</string>
    <string name="text_dialog_when_change_password">Permintaan perubahan kata sandi telah dikirim ke email Anda.</string>
    <string name="text_positive_button_dialog">Oke</string>
    <string name="text_save">Simpan</string>
    <string name="text_error_when_same_fullname">Nama tidak boleh sama!</string>
    <string name="text_success_edit_profile">Perubahan disimpan!</string>
    <string name="text_confirm_edit_profile_data">Anda yakin ingin mengubah data ?</string>
    <string name="text_user_not_login">Anda belum login!</string>
    <string name="text_cencel">Batal</string>
    <string name="text_submit">Submit</string>
    <string name="text_all_data">All</string>
    <string name="text_confirm_change_password_dialog">Yakin mau ganti password?</string>
    <string name="error_unknown">Terjadi kesalahan!\n</string>
    <string name="error_wrong_password">Password anda salah!</string>
    <string name="error_wrong_email">Email atau password salah!</string>
    <string name="text_register_success">Daftar berhasil!</string>
</resources>