<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_total_price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_total_price"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_total_price"
            app:layout_constraintEnd_toStartOf="@+id/btn_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_poppins_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_price_title"
            tools:text="@string/text_total_price_cart" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_rounded"
            android:fontFamily="@font/font_poppins_semibold"
            android:text="@string/text_btn_order"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>