<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/tv_payment_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_open_sans_semi_bold"
        android:text="@string/text_payment_method_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rg_payment_method"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_border_transparent"
        android:checkedButton="@id/rb_cash"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_method">

        <RadioButton
            android:id="@+id/rb_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_left"
            android:button="@drawable/bg_rounded_border_transparent"
            android:fontFamily="@font/font_open_sans_semi_bold"
            android:text="@string/text_rb_cash"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color_selected" />

        <RadioButton
            android:id="@+id/rb_e_wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_selector_right"
            android:button="@drawable/bg_rounded_border_transparent"
            android:fontFamily="@font/font_open_sans_semi_bold"
            android:text="@string/text_rb_e_wallet"
            android:textAlignment="center"
            android:textColor="@drawable/radio_text_color_selected" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>