<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_success"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_success_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_poppins_semibold"
            android:text="@string/text_dialog_order_success"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_success" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_summary_order"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/bg_rounded_border_transparent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_success_title"
            tools:listitem="@layout/item_price" />

        <TextView
            android:id="@+id/tv_total_price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/font_poppins_semibold"
            android:text="@string/text_total_price"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_total_price_success"
            app:layout_constraintStart_toStartOf="@id/rv_summary_order"
            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />

        <TextView
            android:id="@+id/tv_total_price_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/font_poppins_semibold"
            android:text="@string/text_total_price_cart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/rv_summary_order"
            app:layout_constraintTop_toBottomOf="@id/rv_summary_order" />

        <Button
            android:id="@+id/btn_back_on_success"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/btn_outline_primary"
            android:text="@string/text_btn_success_order"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price_success" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>