<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_menu_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_checkout_menu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_menu_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_checkout_menu_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_cart_menu_price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_menu_img"
        app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_name" />

    <TextView
        android:id="@+id/tv_total_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/font_poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_name"
        tools:text="x5" />

    <TextView
        android:id="@+id/tv_text_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/darkGrey"
        tools:hint="@string/text_hint_note"
        android:textSize="12sp"
       app:layout_constraintTop_toBottomOf="@id/tv_checkout_menu_price"
        app:layout_constraintStart_toEndOf="@+id/iv_menu_img" />



</androidx.constraintlayout.widget.ConstraintLayout>