<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cart_menu"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_cart_menu_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_cart_menu_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/iv_trash"
            app:layout_constraintStart_toEndOf="@id/iv_cart_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_cart_menu_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_cart_menu_price"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/iv_trash"
            app:layout_constraintStart_toEndOf="@id/iv_cart_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_menu_name" />

        <ImageView
            android:id="@+id/iv_trash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_trash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_cart_menu_name"
            app:layout_constraintTop_toTopOf="@id/tv_cart_menu_name"
            app:tint="@color/on_error" />

        <EditText
            android:id="@+id/edit_text_note"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_note"
            android:padding="4dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/layout_item_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_trash" />

        <include
            android:id="@+id/layout_item_quantity"
            layout="@layout/layout_cart_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/line_cart"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/font_poppins_semibold"
            android:text="@string/text_cart_total_price_item"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_cart" />

        <View
            android:id="@+id/line_cart"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#CD848484"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_cart_menu_name"
            app:layout_constraintTop_toBottomOf="@id/iv_cart_menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>